# genetic-sequence-formulizer

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  dummy.cpp  evolve.hpp  genome.hpp  utilities.hpp
lib/: CMakeLists.txt  evolve.cpp  genome.cpp  genome.hpp  utilities.cpp  utilities.hpp
src/: CMakeLists.txt  div_test.cpp  main.cpp
